Copy changes and links for sya and tya shutter pages

--- a/shutterPages/sya/index.html
+++ b/shutterPages/sya/index.html
@@ -49,14 +49,12 @@
         
         <main class="govuk-main-wrapper " id="main-content" role="main">
             <h2 class="govuk-heading-l">
-                We’re sorry but this online service is currently unavailable
+                Sorry, this service is unavailable
             </h2>
-            <p>You can try again tomorrow or download and fill out a paper form.</p>
-            <div id="submit-buttons">
-                <a href="http://formfinder.hmctsformfinder.justice.gov.uk/sscs1-eng.pdf" class="govuk-button button-padding">
-                    Continue to form download
-                </a>
-            </div>
+            <p>This is because we have taken it offline to update and improve it.</p>
+            <p>
+                You can try again tomorrow or submit your appeal by <a href="http://formfinder.hmctsformfinder.justice.gov.uk/sscs1-eng.pdf">filling out a paper form</a>.
+            </p>
         </main>
     </div>
 
